# Plugin-creator-website

./: .gitignore  LICENSE.md  README.md  build.zig  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.js
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/docs/: _documentation.md  documentation.md  drafts.md  getting-started.md  index.md  manifest.md
docs/docs/attribute-types/: .biome-spawn-params.md  animation.md  attribute-collection.md  base.md  car-flags.md  frame-animation-indices.md  frame.md  index.md
docs/docs/draft-types/: .base.md  .building-based.md  .building.md  .car.md  .gitignore  .rci.md  .spawnable.md  .viewport.md  airport.md  animation.md  award.md  base.md  biome.md  body disposal.md  building.md  buoy.md  bus depot.md  bus.md  car.md  category.md  color.md  commercial.md  data.md  decoration.md  destroyed.md  education.md  energy.md  farm.md  fire brigade.md  harbor ind.md  harbor pier.md  index.md  industrial.md  landmark.md  medic.md  military.md  park.md  police.md  public.md  railway station.md  (+9 more)
docs/docs/getting-started/: installing.md  writing-a-sample-plugin.md
docs/docs/guides/: airplanes.md  aliases.md  animations.md  biomes.md  bus-stops.md  car-identification.md  cars.md  categories.md  compositions.md  construction-cranes.md  custom-loading-topics.md  custom-water.md  fireworks.md  (+23 more)
docs/drafts/: base.py  building.py  category.py  data.py  generate.py  spawnable.py  stubs.py  template.py  viewport.py
docs/mkdocs_custom/: __init__.py  inheritor.py  mapping.py  types.py
docs/theotown_plugin_documentation/: main.py
(+174 files in other folders)
