[tool.poetry]
name = "mkdocs-custom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
#package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
typing-extensions = "^4.12.2"
mkdocs-material = "^9.5.28"
markdown-include = "^0.8.1"
lxml = "^5.2.2"
lxml-stubs = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.plugins."mkdocs.plugins"]
#"add-number" = "mkdocs_custom.plugin:AddNumberPlugin"
