[tool.poetry]
name = "mkdocs-custom"
version = "0.1.0"
description = ""
authors = ["Dominykas Svetikas <dominykas@svetikas.lt>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
typing-extensions = "^4.12.2"
mkdocs-material = "^9.5.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
